...
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" tag="13" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pmi-ZE-B5B">
                                                        <rect key="frame" x="94" y="0.0" width="93" height="98.5"/>
                                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
                                                        <state key="normal" title="+/-">
                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="buttonAction:" destination="LWZ-bj-QkE" eventType="touchUpInside" id="zr7-WO-iMQ"/>
                                                        </connections>
                                                    </button>
...
